# rangu.fam

./: .dockerignore  .env  .env.example  .env.local  .env.local.example  .eslintrc.json  .gitattributes  .gitignore  .vercelignore  COMMIT_CONVENTION.md  CUSTOM_ICONS_DEMO.md  DATABASE_IMAGE_STORAGE.md  DOCUMENT_LOCKING_README.md  Dockerfile  ENV_CONFIGURATION.md  FEATURE_DEMO.md  HYDRATION_FIXES.md  KEY_GENERATION_GUIDE.md  QUICK_KEYS_REFERENCE.md  README.md  SETUP.md  TABLE_COLOR_DEMO.md  TEMPLATE_COLOR_DEMO.md  cloudbuild.yaml  drizzle.config.ts  help_2026.md  middleware.ts  next.config.js  package-lock.json  package.json  rangu.fam.sln  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json  도움말.md  문서_편집_잠금_데모.md  이랑위키_튜토리얼.md
.vercel/: project.json
deploy/: 01-setup-gcp.ps1  02-secrets.ps1  03-deploy.ps1  04-domains.ps1  DEPLOY.md
docs/: BRANDING.md  DISCORD_WEBHOOKS.md  MIGRATION_CHECKLIST_NAS_POSTGRES_AWS.md  POSTGRES_TRANSITION_SSO.md  card-battle-design.md  gcp-cost-optimization.md  rangu-universe-architecture.md  service-login-platform-integration.md  tactics-combat-demo.md
game/: .gitignore  cloudbuild.yaml
scripts/: README-seungchan-setup.md  add-dynamic-to-apis.js  add-missing-users.js  add-temp-members.js  backup-local-data.js  backup-user-data.js  battle-sim.ts  check-env.js  check-user-data.js  check-wiki-data.js  create-missing-profiles.js  deploy-seungchan.js  export_json_to_csv.ps1  (+30 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+517 files in other folders)
