[package]
name = "app"
version = "0.1.0"
description = "랑구 택틱스 데스크톱 클라이언트"
authors = ["DoubleJ"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 실행 파일명을 RanguTactics.exe 로 (기본은 package name "app" → app.exe)
[[bin]]
name = "RanguTactics"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
